# cd-project-25

./: .env.example  ABSTRACT.md  README.md  app.py  bedrock_implementation.py  main.py  pyproject.toml
